[gd_scene load_steps=11 format=3 uid="uid://bq6pp3yg2pf2q"]

[ext_resource type="Script" uid="uid://br5t2ogu2py56" path="res://scripts/ui/settings_menu.gd" id="1_qwcqe"]
[ext_resource type="Texture2D" uid="uid://s4vxi6jyh10r" path="res://assets/sprites/atlas/ui_button_0.tres" id="2_x3vyp"]
[ext_resource type="Theme" uid="uid://dtiv81upl2jvn" path="res://assets/ui_theme.theme" id="3_0b1cv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wfqe"]
bg_color = Color(0.25882354, 0.12941177, 0.17254902, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yu862"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywggk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ngbvi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mishw"]

[sub_resource type="LabelSettings" id="LabelSettings_8wfqe"]
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_7pacj"]
font_size = 40

[node name="Settings" type="Node2D"]
script = ExtResource("1_qwcqe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="ColorRect" type="Panel" parent="CanvasLayer"]
process_mode = 3
offset_left = 480.0
offset_top = 143.0
offset_right = 1480.0
offset_bottom = 843.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8wfqe")
metadata/_edit_use_anchors_ = true

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 420.0
offset_top = 100.0
offset_right = 938.0
offset_bottom = 227.0

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 420.0
offset_top = 200.0
offset_right = 938.0
offset_bottom = 327.0

[node name="BackButton" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 299.0
offset_top = 489.0
offset_right = 678.0
offset_bottom = 619.0
theme_override_icons/icon = ExtResource("2_x3vyp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yu862")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ywggk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ngbvi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mishw")

[node name="MenuLabel" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 291.0
offset_top = 12.0
offset_right = 705.0
offset_bottom = 177.0
theme = ExtResource("3_0b1cv")
text = "SETTINGS"
label_settings = SubResource("LabelSettings_8wfqe")

[node name="MusicLabel" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 61.0
offset_top = 134.0
offset_right = 333.0
offset_bottom = 194.0
theme = ExtResource("3_0b1cv")
text = "Music"
label_settings = SubResource("LabelSettings_7pacj")

[node name="SFXLabel" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 61.0
offset_top = 231.0
offset_right = 333.0
offset_bottom = 291.0
theme = ExtResource("3_0b1cv")
text = "SFX"
label_settings = SubResource("LabelSettings_7pacj")

[connection signal="value_changed" from="CanvasLayer/ColorRect/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/ColorRect/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="button_up" from="CanvasLayer/ColorRect/BackButton" to="." method="_on_back_button_button_up"]
